--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ layout: default
 <div class="full notop">
 	<!--<div class="wip">Site under development (&larr; literally; not a clever title)</div>-->
     <div class="wip">WIP</div>
+    <div class="projecttext">Visit my previous site at: <a href="http://patrick.thedotank.org">patrick.thedotank.org</a></div><br><br>
 	<h1 class="hometext">Patrick Stowe Jones</h1>
 	<h1 class="hometext">
 	i am an architect, designer, and writer focused on the human environment
