--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="full gifbg"> <!-- add class gifbg when done -->
 	<h1 class="hometext">
-	Maybe it’s the place where you leave your shopping cart, or the curb where you sit to drink a Big Gulp. Maybe it’s when you hear what sounds like a thousand birds but the nearest trees are on the other site of an empty lot. It’s the smell of earth arising from concrete, or the sheltering shadow of the adjacent face of the building, where the fire exit that nobody uses opens to. Water’s gathered there also, but you only ever notice this place when you’re staying late for work, and at dusk you step outside for some air, for a cigarette, for a notion.
+	Maybe it’s the place where you leave your shopping cart, or the curb where you sit to drink a Big Gulp. Maybe it’s when you hear what sounds like a thousand birds but the nearest trees are on the other side of an empty lot. It’s the smell of earth arising from concrete, or the sheltering shadow of the adjacent face of the building, where the fire exit that nobody uses opens to. Water’s gathered there also, but you only ever notice this place when you’re staying late for work, and at dusk you step outside for some air, for a cigarette, for a notion.
 	</h1>
 </div>
 
