--- a/projects/architecture/despurdetroit.html
+++ b/projects/architecture/despurdetroit.html
@@ -6,3 +6,23 @@ folder: architecture
 place: Detroit
 year: 2010
 ---
+
+<div class="border1 gray_bg">
+<img src="{{site.baseurl}}/img/despur/hastings2.jpg">
+<br>
+<img src="{{site.baseurl}}/img/despur/hastings.jpg">
+</div>
+
+<div class="full">
+    <div class="projectheadline">Reconnecting Detroit through freeway removal</div>
+    <br>
+    <div class="projecttext">
+    As the state of Michigan considers spending $1.8 billion to add one lane to less than seven miles of I-94 in inner-city Detroit, the rest of us can find alternatives to such extensive investment that repairs and strengthens the city not just to mitigate, but to undo, the mistakes of the past. Despur Detroit is series of study proposal to remove two freeway spurs that bracket downtown Detroit: the Lodge and I-375. 
+    </div>
+</div>
+
+<div class="border1">
+    <h1 class="projectname">The Lodge</h1>
+    <br>
+    <img src="{{site.baseurl}}/img/despur/despur1_labels.png">
+<br>
