--- a/projects/index4.html
+++ b/projects/index4.html
@@ -51,12 +51,12 @@ layout: default
 <br>
 <div class="work_grid_2h">  
     <div class="border1 gray_bg">
-    <a href="{{site.baseurl}}/projects/architecture/cc.html"><h1 class="projectname hvr-shrink">Changing Course</h1></a>
-    <br> 
-    <span class="projecttext">Reconstructing the Mississippi delta as protective infrastructure</span>
+    <a href="{{site.baseurl}}/projects/architecture/despurdetroit.html"><h1 class="projectname hvr-shrink">Despur Detroit</h1></a>
+    <br>
+    <span class="projecttext">Removing the Lodge and I-375 spurs</span>
     </div>
     <div>
-    <a href="{{site.baseurl}}/projects/architecture/cc.html"><img src="{{site.baseurl}}/img/cc/comm_ind_2018.png" class="op80"></a>
+    <a href="{{site.baseurl}}/projects/architecture/despurdetroit.html"><img src="{{site.baseurl}}/img/despur/despur1_labels.png" class="op80"></a>
     </div>
 </div>
 <br>
@@ -73,12 +73,12 @@ layout: default
 <br>
 <div class="work_grid_2h">  
     <div class="border1 gray_bg">
-    <h1 class="projectname">Despur Detroit</h1>
-    <br>
-    <span class="projecttext">Removing the Lodge and I-375 spurs</span>
+    <a href="{{site.baseurl}}/projects/architecture/cc.html"><h1 class="projectname hvr-shrink">Changing Course</h1></a>
+    <br> 
+    <span class="projecttext">Reconstructing the Mississippi delta as protective infrastructure</span>
     </div>
     <div>
-    <img src="{{site.baseurl}}/img/despur/despur1_labels.png" class="op80">
+    <a href="{{site.baseurl}}/projects/architecture/cc.html"><img src="{{site.baseurl}}/img/cc/comm_ind_2018.png" class="op80"></a>
     </div>
 </div>
 <br>
