Added stand-alone changing course slide

--- a/projects/architecture/ae.html
+++ b/projects/architecture/ae.html
@@ -7,8 +7,8 @@ place: Thames Estuary
 year: 2009
 blurb: This was the start of it all.
 ---
-<!--
-<div class="full notop">
+
+<div class="full notop t5">
 	<div class="projectheadline">
 	Time, memory, and imagination after modernity
 	</div>
@@ -17,7 +17,8 @@ blurb: This was the start of it all.
 	Against Exile (Harvard thesis, 2009) is a contemplation of the ruin and the uprootedness of modernity, a name given to a collection of social, economic, cultural, and technological characteristics of the world since the turn of the Twentieth century which parallel ideologies of modernist philosophy. Proposing the reoccupation of abandoned WWII sea forts by vagabonds and seekers of paradise as a refuge from modernity, the project questions what the status of modernism is for the students of today, who contest from their own experience the ideologies that constructed much of the world since mid-century. The thesis does not adhere to a delineated program, but presents a collection of spaces which orient occupation towards the environment. While some spaces are designed for the collection of records or to celebrate the rituals of arrival, the final manner of occupation remains undenoted. Concentrating on three aspects of being left neglected or ignored by modernist philosophy - memory, temporality, and imagination - the project in the end seeks to foster a reclamation of the foundational elements of the human experience, against the many real and figurative exiles of modernity. The intervention consists as a repository of narratives and fragmentations in which the gaps and vacancies of things “lost and recovered” are filled again, returned by the collaging of human communities, their histories, and their stories. 
 	</div>
 </div>
--->
+
+
 <div class="border1 gray_bg">
 <img src="{{site.baseurl}}/img/ae/ae_grid.png">
 </div>
