--- a/projects/architecture/despurdetroit.html
+++ b/projects/architecture/despurdetroit.html
@@ -17,12 +17,53 @@ year: 2010
     <div class="projectheadline">Reconnecting Detroit through freeway removal</div>
     <br>
     <div class="projecttext">
-    As the state of Michigan considers spending $1.8 billion to add one lane to less than seven miles of I-94 in inner-city Detroit, the rest of us can find alternatives to such extensive investment that repairs and strengthens the city not just to mitigate, but to undo, the mistakes of the past. Despur Detroit is series of study proposal to remove two freeway spurs that bracket downtown Detroit: the Lodge and I-375. 
+    As the state of Michigan considers spending $1.8 billion to add one lane to less than seven miles of I-94 in inner-city Detroit, the rest of us can find alternatives to such extensive investment that repairs and strengthens the city not just to mitigate, but to undo, the mistakes of the past. De-Spur Detroit is series of simple study proposals to remove two freeway spurs that bracket downtown Detroit, the Lodge and I-375, in the most straightforward manner allowed.<br><br>
     </div>
 </div>
 
-<div class="border1">
-    <h1 class="projectname">The Lodge</h1>
-    <br>
-    <img src="{{site.baseurl}}/img/despur/despur1_labels.png">
-<br>
+
+<!-- THE LODGE -->
+<div class="border1 black_bg">
+    <h1 class="projectname">1 / The Lodge</h1>
+    <img src="{{site.baseurl}}/img/despur/lodge6.png" class="fullbleed">
+</div>
+
+<div class="border1 gray_bg">
+        <div class="switch">
+            <div class="start"><img src="{{site.baseurl}}/img/despur/despur1_before.png"></div>
+            <div class="end"><img src="{{site.baseurl}}/img/despur/despur1B_after.png"></div>
+        </div>
+
+    <div class="full white_bg">
+        <div class="projecttext">
+        A new boulevard flows traffic from the Lodge into Corktown and the southern edge of downtown before transitioning to Jefferson Avenue through a new gateway park. In this scenario, Cobo Center is reconstructed to fit within the street grid without sacrificing floor area. The proposal also preserves the few remaining historic structures that border the Lodge. 
+        </div>
+    </div>
+    
+    <div class="notop">
+        <img src="{{site.baseurl}}/img/despur/despur1B_labels.png">
+    </div>
+</div>
+
+
+<!-- CHRYSLER -->
+<div class="border1 black_bg">
+    <h1 class="projectname">2 / I-375</h1>
+</div>
+
+<div class="border1 gray_bg">
+        <div class="switch">
+            <div class="start"><img src="{{site.baseurl}}/img/despur/despur2_before.png"></div>
+            <div class="end"><img src="{{site.baseurl}}/img/despur/despur2_after.png"></div>
+        </div>
+
+    <div class="full white_bg">
+        <div class="projecttext">
+        Spur description
+        </div>
+    </div>
+    
+    <div class="notop">
+        <img src="{{site.baseurl}}/img/despur/despur2_labels.png">
+    </div>
+</div>
