--- a/narrative.html
+++ b/narrative.html
@@ -342,7 +342,7 @@ layout: stanford
 
             <!-- SEDIMENT -->
             <div class="grid grid_2h">
-                <div class="gray_bg border0 bottborder">
+                <div class="gray_bg border0">
                     <span class="narr-projectheadline yellow1 uline">Sediment</span><br><br>
                     <div class="projecttext yellow1">
                     We have a simple need: to capture the sediment the Mississippi carries to Louisiana rather than losing it to the sea. 
@@ -367,7 +367,7 @@ layout: stanford
                     Ecosystems
                     </span>
                 </div>
-                <div class="gray_bg border0 bottborder">
+                <div class="gray_bg border0">
                     <span class="narr-projectheadline yellow1 uline">Ecosystems</span><br><br>
                     <div class="projecttext yellow1">
                     New ground means there's a place for plants to take root and, consequently, for resilient ecosystems to recover. If healthy, these ecosystems strengthen the capacity for the marsh to act as a barrier against destructive storm surges by providing a range of plant species suitable to different conditions, such as water salinity and soil density. Without this diversity of healthy ecosystems, the marsh will be vulnerable to powerful climate events like hurricanes. 
@@ -379,7 +379,7 @@ layout: stanford
 
             <!-- COMM IND -->
             <div class="grid grid_2h">
-                <div class="gray_bg border0 bottborder">
+                <div class="gray_bg border0">
                     <span class="narr-projectheadline yellow1 uline">Community & Industry</span><br><br>
                     <div class="projecttext yellow1">
                     Without systemically rethinking river controls, communities have limited hope to remain viable, let alone grounded and dry. At this point, communities need a healthy delta to keep living. Perversely, without the value attached to the existence and heritage of communities througout the delta, complacency and ambivalence might pose a greater threat instead.<br><br>There are good reasons to design environmental systems that allow communities and industrial sites to coexist with this fragile landscape, and mitigate — and in many cases, reverse - the threat that industry has posed to the delta in previous decades. 
@@ -403,7 +403,7 @@ layout: stanford
                     Flooding
                     </span>
                 </div>
-                <div class="gray_bg border0 bottborder">
+                <div class="gray_bg border0">
                     <span class="narr-projectheadline yellow1 uline">Flooding</span><br><br>
                     <div class="projecttext yellow1">
                     That means making a compromise between where we build and where we don't, and designing new forms of infrastructure that allow the river to behave as it would without human intervention. Porous flood barriers would selectively allow seasonal flooding to occur while mostly containing the existing channel. Between enclosed protected areas, designated flood zones would expose the surrounding marsh to the full force of the river in order to distribute sediment without pipeline diversions.
@@ -415,7 +415,7 @@ layout: stanford
 
             <!-- NAV -->
             <div class="grid grid_2h">
-                <div class="gray_bg border0 bottborder">
+                <div class="gray_bg border0">
                     <span class="narr-projectheadline yellow1 uline">Navigation</span><br><br>
                     <div class="projecttext yellow1">
                     The Mississippi River between La Balize and Baton Rouge is home to one of the largest combined port system in the world. Because existing industries will be no longer viable without drastic action to reconstruct lost marsh, commercial activity and the delta are mutually bound. Just as upstream activity affects the delta, what we do here reverberates upstream. Taken together, these strategies protect the navigation routes that the coastal economy depends on. That's true for the independent shrimp boat as much as it is for a world-cruising container ship. 
